--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,16 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>
-        Hello
-        
-    </h1>
+    <header>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia labore itaque iusto id alias, veniam animi
+        nobis asperiores explicabo sequi incidunt iure neque et ad aspernatur deleniti corrupti omnis ipsum.
+    </header>
+    <h5>hgasjklhglkahjgla</h5>
 </body>
+<div class="one">
+
+</div>
+
 </html>
